--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content ="width=device-width, initial-scale=1.0" >
         <meta http-equiv="X-UA-Compatible" content ="ie=edge" >
 		
-			<title>Webdite</title>
+			<title>Website</title>
 			<script src="https://kit.fontawesome.com/feed876ad4.js" crossorigin="anonymous"></script>
 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
